Fix toast container z-index

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -343,7 +343,7 @@ div.dropdown-menu {
   max-width: 350px;
   position: fixed;
   top: 2rem;
-  z-index: 1031;
+  z-index: 1051;
 
   .success {
     background-color: $success;
